# automated-fact-checking-pipeline

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  LICENSE  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  eval.yml
.streamlit/: secrets.toml.example
agents/: __init__.py  base.py  claim_agent.py  extractor_agent.py  final_answer_tool.py  grounding.py  manager_agent.py  model_factory.py  prompt_templates.py  prompts.py  research_agent.py  social_extractor_agent.py  social_manager_agent.py  social_research_agent.py
data/: claim_extraction.sample.jsonl
docs/: .gitkeep  ARCHITECTURE.md  DEPLOY.md  EVAL.md  PROJECT_SUMMARY.md  RESUME.md  SHOWCASE.md
evals/: build_fixture.py  fixture_loader.py  hallucination_check.py  run_pipeline_eval.py
evals/fixtures/: labeled_claims.json
evals/results/: pipeline_eval_latest.json
finetuning/: unsloth_qlora.py
scripts/: aws_start_vllm.sh  check_showcase_health.sh  run_eval_and_update_readme.sh  setup-git-hooks.sh  start_api.sh
scripts/git-hooks/: prepare-commit-msg
serve/: __init__.py  api.py  auth.py  safety.py  schemas.py  vllm_config.md
telemetry/: __init__.py  langfuse_setup.py
tests/: test_api.py  test_api_auth.py  test_fixture_loader.py  test_grounding.py  test_manager_parse.py  test_safety.py  test_scraper.py
tools/: __init__.py  scraper.py  search.py  social_extractor.py  trusted_search.py
